clusters/k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtubedownloader
  namespace: woodland
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtubedownloader
  template:
    metadata:
      labels:
        app: youtubedownloader
    spec:
      containers:
      - name: youtubedownloader
        image: ghcr.io/princeofxane/youtubedownloader:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: houseofcommons
          mountPath: /mnt/houseofcommons
      volumes:
      - name: houseofcommons
        persistentVolumeClaim:
          claimName: houseofcommons-pvc
      imagePullSecrets:
      - name: ghcr-secret
